# pdf_merger

./: .gitignore  Cargo.toml
benches/: nominal_merge.rs
src/: main.rs  merger.rs
