[package]
name = "pdf_merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.31.0"
chrono = "0.4.31"
rayon = "1.8.0"
pdf_merger_lig = { path = "../pdf_merger_lig" }


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "nominal_merge"
harness = false  # Important pour utiliser Criterion
# Pour lancer le benchmark : cargo bench --bench nominal_merge
